--- a/app/src/main/res/layout/activity_new_checklist_item.xml
+++ b/app/src/main/res/layout/activity_new_checklist_item.xml
@@ -21,13 +21,13 @@
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/accent_color_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include9">
+        app:layout_constraintTop_toBottomOf="@+id/new_checklist_item_header_f">
 
         <Button
             android:id="@+id/new_cl_item_cancel_btn"
@@ -79,9 +79,9 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include
-        android:id="@+id/include9"
-        layout="@layout/profile_header_view"
+    <fragment
+        android:id="@+id/new_checklist_item_header_f"
+        android:name="com.slack.motometer.ui.fragments.ProfileHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
