--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -58,11 +58,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:autoText="false"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/activity_new_profile_model_hint"
-            android:inputType="textPersonName"
+            android:inputType="textNoSuggestions"
             app:layout_constraintBaseline_toBaselineOf="@+id/new_profile_model_tv"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -71,7 +70,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:autoText="false"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/activity_new_profile_year_hint"
@@ -84,11 +82,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:autoText="false"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/activity_new_profile_make_hint"
-            android:inputType="textPersonName"
+            android:inputType="textNoSuggestions"
             app:layout_constraintBaseline_toBaselineOf="@+id/new_profile_make_tv"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -97,7 +94,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:autoText="false"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/activity_new_profile_hourmeter_hint"
