--- a/app/src/main/res/layout/fragment_profile_header.xml
+++ b/app/src/main/res/layout/fragment_profile_header.xml
@@ -11,6 +11,7 @@
         android:id="@+id/profile_header_img_iv"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:adjustViewBounds="true"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
