--- a/app/src/main/res/layout/profile_card_view.xml
+++ b/app/src/main/res/layout/profile_card_view.xml
@@ -21,11 +21,23 @@
 
         <ImageView
             android:id="@+id/profile_card_view_iv"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@android:drawable/ic_menu_gallery"
-            android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:adjustViewBounds="true"
+            app:layout_constraintEnd_toStartOf="@+id/profile_card_view_chevron"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_card_view_title_tv" />
+
+        <TextView
+            android:id="@+id/profile_card_view_title_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,30 +45,22 @@
             android:id="@+id/profile_card_view_hrs_value_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintBaseline_toBaselineOf="@+id/profile_card_view_hrs_tv"
-            app:layout_constraintEnd_toStartOf="@+id/profile_card_view_hrs_tv" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_card_view_iv" />
 
         <TextView
             android:id="@+id/profile_card_view_hrs_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginStart="4dp"
             android:text="@string/profile_card_view_hrs"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/profile_card_view_chevron" />
-
-        <TextView
-            android:id="@+id/profile_card_view_title_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintEnd_toStartOf="@+id/profile_card_view_chevron"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/profile_card_view_hrs_value_tv"
+            app:layout_constraintStart_toEndOf="@+id/profile_card_view_hrs_value_tv" />
 
         <View
             android:id="@+id/profile_card_view_chevron"
@@ -67,6 +71,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/profile_card_view_wrench"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@android:drawable/ic_menu_manage"
+            app:layout_constraintEnd_toStartOf="@+id/profile_card_view_chevron"
+            app:layout_constraintTop_toBottomOf="@+id/profile_card_view_iv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
