Fixed tabbed ViewPager error and general refactoring
* Fixed fatal error with tabbed ViewPager accessing database with just deleted profile id.
* Refactored DatabaseHelper to use singleton pattern to fix context leaks every time a database access was necessary.
* Fixed issue with ChecklistItem views inside listview not resetting properly after deleting an item.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="page_background">#FF393E46</color>
     <color name="accent">#FF00ADB5</color>
     <color name="accent_pressed">#00DDB5</color>
-    <color name="light">#FFEEEEEE</color>
+    <color name="textColor">#FFEEEEEE</color>
+    <color name="opaqueTextColor">#77EEEEEE</color>
 </resources>
