--- a/app/src/main/res/drawable/profile_header_background.xml
+++ b/app/src/main/res/drawable/profile_header_background.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/light" />
+        android:color="@color/textColor" />
     <solid android:color="@color/db2"/>
 
 </shape>
