--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="colorPrimary">@color/db2</item>
         <item name="colorPrimaryDark">@color/page_background</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="android:textColor">@color/light</item>
+        <item name="android:textColor">@color/textColor</item>
         <item name="editTextStyle">@style/App_EditTextStyle</item>
     </style>
 
