--- a/app/src/main/res/layout/activity_post_ride.xml
+++ b/app/src/main/res/layout/activity_post_ride.xml
@@ -106,4 +106,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/post_ride_toolbar" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/post_ride_nav_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/post_ride_nav_menu"
+        app:labelVisibilityMode="labeled"
+        app:itemIconTint="@color/textColor" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
