--- a/app/src/main/res/layout/activity_tasks_overview.xml
+++ b/app/src/main/res/layout/activity_tasks_overview.xml
@@ -27,10 +27,11 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:divider="#00000000"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tasks_overview_nav_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_f" />
+        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_f" >
+    </ListView>
 
     <TextView
         android:id="@+id/empty_task_item"
@@ -56,5 +57,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tasks_overview_toolbar" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/tasks_overview_nav_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/tasks_overview_nav_menu"
+        app:labelVisibilityMode="labeled"
+        app:itemIconTint="@color/textColor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
