--- a/app/src/main/res/layout/activity_profile_overview.xml
+++ b/app/src/main/res/layout/activity_profile_overview.xml
@@ -6,58 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.ProfileOverview">
 
-    <Button
-        android:id="@+id/profile_overview_maintenance_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/button_profile_action"
-        android:text="@string/activity_profile_overview_maintenance"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_overview_header_f" />
-
-    <Button
-        android:id="@+id/profile_overview_post_ride_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/button_profile_action"
-        android:text="@string/activity_profile_overview_post_ride"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_overview_maintenance_btn" />
-
-    <Button
-        android:id="@+id/profile_overview_pre_ride_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/button_profile_action"
-        android:text="@string/activity_profile_overview_pre_ride"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_overview_post_ride_btn" />
-
-    <Button
-        android:id="@+id/profile_overview_notes_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/button_profile_action"
-        android:text="@string/activity_profile_overview_notes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_overview_pre_ride_btn" />
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/profile_overview_toolbar"
         android:layout_width="409dp"
@@ -69,16 +17,83 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/profile_overview_toolbar_bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/opaqueTextColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_overview_toolbar" />
+
     <fragment
         android:id="@+id/profile_overview_header_f"
         android:name="com.slack.motometer.ui.fragments.ProfileHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_overview_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_overview_toolbar_bottom_border" />
+
+    <View
+        android:id="@+id/profile_overview_header_bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/opaqueTextColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_overview_header_f" />
+
+    <Button
+        android:id="@+id/profile_overview_maintenance_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/button_profile_action"
+        android:text="@string/activity_profile_overview_maintenance"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_overview_header_bottom_border" />
+
+    <Button
+        android:id="@+id/profile_overview_post_ride_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/button_profile_action"
+        android:text="@string/activity_profile_overview_post_ride"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_overview_maintenance_btn" />
+
+    <Button
+        android:id="@+id/profile_overview_pre_ride_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/button_profile_action"
+        android:text="@string/activity_profile_overview_pre_ride"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_overview_post_ride_btn" />
+
+    <Button
+        android:id="@+id/profile_overview_notes_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/button_profile_action"
+        android:text="@string/activity_profile_overview_notes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_overview_pre_ride_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
