--- a/app/src/main/res/layout/activity_task_sign_off.xml
+++ b/app/src/main/res/layout/activity_task_sign_off.xml
@@ -17,77 +17,42 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/accent_color_border"
+    <View
+        android:id="@+id/task_sign_off_toolbar_bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/opaqueTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+        app:layout_constraintTop_toBottomOf="@+id/task_sign_off_toolbar" />
 
-        <Button
-            android:id="@+id/task_sign_off_btn"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/button_confrim"
-            app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_hours_tv"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <EditText
-            android:id="@+id/task_sign_off_value_et"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:ems="5"
-            android:gravity="center"
-            android:inputType="numberDecimal"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_at_tv"
-            app:layout_constraintStart_toEndOf="@+id/task_sign_off_at_tv" />
-
-        <TextView
-            android:id="@+id/task_sign_off_at_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:text="@string/activity_task_sign_off_at"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/task_sign_off_hours_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:text="@string/hours"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_value_et"
-            app:layout_constraintStart_toEndOf="@+id/task_sign_off_value_et" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+    <fragment
+        android:id="@+id/task_sign_off_header_f"
+        android:name="com.slack.motometer.ui.fragments.ProfileHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/task_sign_off_toolbar_bottom_border" />
+
+    <View
+        android:id="@+id/task_sign_off_header_bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/opaqueTextColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/task_sign_off_header_f" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/task_sign_off_task_info_cl"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/db2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/task_sign_off_header_f">
+        app:layout_constraintTop_toBottomOf="@+id/task_sign_off_header_bottom_border">
 
         <TextView
             android:id="@+id/task_sign_off_task_title_tv"
@@ -208,16 +173,71 @@
             app:layout_constraintStart_toEndOf="@+id/task_sign_off_last_at_value_tv" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <fragment
-        android:id="@+id/task_sign_off_header_f"
-        android:name="com.slack.motometer.ui.fragments.ProfileHeader"
+    <View
+        android:id="@+id/task_sign_off_task_info_cl_bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/opaqueTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/task_sign_off_task_info_cl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/task_sign_off_cl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/accent_color_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/task_sign_off_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/task_sign_off_task_info_cl_bottom_border">
+
+        <Button
+            android:id="@+id/task_sign_off_btn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/button_confrim"
+            app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_hours_tv"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/task_sign_off_value_et"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:ems="5"
+            android:gravity="center"
+            android:inputType="numberDecimal"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_at_tv"
+            app:layout_constraintStart_toEndOf="@+id/task_sign_off_at_tv" />
+
+        <TextView
+            android:id="@+id/task_sign_off_at_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:text="@string/activity_task_sign_off_at"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/task_sign_off_hours_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="@string/hours"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_value_et"
+            app:layout_constraintStart_toEndOf="@+id/task_sign_off_value_et" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
