--- a/app/src/main/res/layout/activity_tasks_overview.xml
+++ b/app/src/main/res/layout/activity_tasks_overview.xml
@@ -8,7 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tasks_overview_toolbar"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
@@ -17,21 +17,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/tasks_overview_toolbar_bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/opaqueTextColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_toolbar" />
+
+    <fragment
+        android:id="@+id/tasks_overview_header_f"
+        android:name="com.slack.motometer.ui.fragments.ProfileHeader"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_toolbar_bottom_border" />
+
+    <View
+        android:id="@+id/tasks_overview_header_bottom_border"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/opaqueTextColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_f" />
+
     <ListView
         android:id="@+id/taskListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:divider="#00000000"
         app:layout_constraintBottom_toTopOf="@+id/tasks_overview_nav_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_f" >
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_f" />
 
     <TextView
         android:id="@+id/empty_task_item"
@@ -40,23 +65,20 @@
         android:text="@string/empty_task_list"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tasks_overview_nav_bar_top_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_bottom_border" />
 
-    <fragment
-        android:id="@+id/tasks_overview_header_f"
-        android:name="com.slack.motometer.ui.fragments.ProfileHeader"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+    <View
+        android:id="@+id/tasks_overview_nav_bar_top_border"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/opaqueTextColor"
+        app:layout_constraintBottom_toTopOf="@+id/tasks_overview_nav_bar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_toolbar" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/tasks_overview_nav_bar"
@@ -65,7 +87,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/tasks_overview_nav_menu"
+        app:menu="@menu/bottom_navigation_view_menu"
         app:labelVisibilityMode="labeled"
         app:itemIconTint="@color/textColor" />
 
