--- a/app/src/main/res/layout/fragment_collapsible_info_panel.xml
+++ b/app/src/main/res/layout/fragment_collapsible_info_panel.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:elevation="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="@color/db2"
     tools:context=".ui.fragments.CollapsibleInfoPanel">
