--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
     <style name="theme_test" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@color/dark_background</item>
         <item name="colorPrimary">@color/db2</item>
+        <item name="android:textColorSecondary">@color/accent</item>
         <item name="colorPrimaryDark">@color/page_background</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColor">@color/textColor</item>
@@ -19,6 +20,11 @@
 
     <style name="App_EditTextStyle" parent="@android:style/Widget.EditText">
         <item name="backgroundTint">@color/accent</item>
+    </style>
+
+    <style name="BottomNavigationTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/textColor</item>
+        <item name="android:textColorSecondary">@color/accent</item>
     </style>
 
 </resources>
